# whisper-streaming-stt-server

./: .dockerignore  .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  requirements-lock.txt  requirements-mlx.txt  requirements-torch.txt  requirements.txt
.github/workflows/: build-image.yaml  ci.yaml
config/: model.yaml  server.loadtest.yaml  server.yaml
config/data/: supported_languages.csv
config/loadtest/: bench_backpressure.yaml  server.loadtest.yaml
docker/: Dockerfile.ubuntu
docs/: admin.md  client_errors.md  clients.md  development.md  operations.md  slo.md  troubleshooting.md
docs/diagrams/: architecture.mmd
examples/ui/: subtitles.html
k8s/: configmap.yaml  deployment.pvc.yaml  deployment.yaml  pvc.yaml  service.yaml
proto/: stt.proto
stt_client/batch/: file.py
stt_client/config/: file.yaml  mic.yaml
stt_client/realtime/: file.py  mic.py
stt_client/sdk/: __init__.py  streaming.py
stt_client/web_mobile/: Caddyfile  README.md  app.js  index.html  manifest.webmanifest  run_with_caddy.sh  styles.css  sw.js
stt_server/: __init__.py  errors.py  main.py
stt_server/backend/application/: __init__.py  metrics.py  model_registry.py  session_manager.py  session_registry.py  stream_orchestrator.py
stt_server/backend/application/stream_orchestrator/: __init__.py  flow.py  helpers.py  orchestrator.py  types.py
stt_server/backend/component/: __init__.py  audio_storage.py  decode_scheduler.py  vad_gate.py
stt_server/backend/core/: decode_scheduler.py  epd.py  metrics.py  profile_resolver.py  session_manager.py  vad.py
stt_server/backend/endpoints/: http.py
stt_server/backend/runtime/: __init__.py  config.py  metrics.py  runtime.py
stt_server/backend/service/: __init__.py  servicer.py
stt_server/backend/service/components/: __init__.py  create_session_handler.py  session_facade.py  streaming_runner.py
stt_server/backend/transport/: __init__.py  grpc_servicer.py  http_server.py  ws_server.py
stt_server/backend/utils/: profile_resolver.py  rate_limit.py  system_metrics.py
stt_server/config/: __init__.py  languages.py  loader.py
stt_server/config/default/: __init__.py  model.py  server.py
stt_server/model/: worker.py
stt_server/model/backends/: __init__.py  base.py  faster_whisper.py  mlx_whisper.py  torch_whisper.py
stt_server/utils/: audio.py  logger.py
tests/: conftest.py  test_abuse_scenarios.py  test_api_contract.py  test_audio_storage.py  test_config_mapping_contract.py  test_decode_stream.py  test_grpc_servicer.py  test_http_server.py  test_integration.py  test_integration_backends.py  test_logging.py  test_metrics.py  test_mlx_whisper_backend.py  test_model_registry.py  test_rate_limit.py  test_session_manager.py  test_shutdown.py  test_shutdown_integration.py  test_stream_orchestrator.py  test_tls_grpc.py  test_units.py  test_ws_server.py
tests/compat/: error_code_contract.json  proto_reserved_contract.json  stt_proto_contract.json
tools/: check_tls_expiry.py  gen_proto.sh  long_run_abuse.py  run_tests.sh  security_smoke_check.sh
tools/bench/: __init__.py  grpc_load_test.py  monitor_dashboard.py  run_benchmark_matrix.sh
tools/dashboard/: metrics_capture.py  monitor_dashboard.py  plot_metrics.py
tools/web_dashboard/: README.md  __init__.py  __main__.py  app.py  run_load_dashboard.sh  targets.json
tools/web_dashboard/api/: __init__.py  routes.py
tools/web_dashboard/core/: __init__.py  run_manager.py
tools/web_dashboard/frontend/: package.json  pnpm-lock.yaml  tsconfig.json
tools/web_dashboard/frontend/src/app/: LangToggle.tsx  ThemeToggle.tsx  i18n.ts  layout.tsx  page.tsx
tools/web_dashboard/frontend/src/styles/: globals.css
