[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whisper-streaming-stt-server"
version = "0.1.0"
description = "Streaming speech-to-text server and clients"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "faster-whisper>=1.0.0,<2.0.0",
  "grpcio>=1.60.0,<2.0.0",
  "numpy>=1.24.0,<3.0.0",
  "onnxruntime>=1.17.0,<2.0.0",
  "soundfile>=0.12.1,<1.0.0",
  "pyyaml>=6.0.1,<7.0.0",
  "sounddevice>=0.4.6,<1.0.0",
  "fastapi>=0.110.0,<1.0.0",
  "uvicorn>=0.27.0,<1.0.0",
  "websockets>=11.0,<17.0",
  "silero-vad>=5.1.2,<7.0.0",
  "requests>=2.31.0,<3.0.0",
  "psutil>=5.9.8,<8.0.0",
]

[project.optional-dependencies]
# torch extra: needed for torch_whisper backend, MPS (Apple Silicon),
# openai-whisper fallback, and Silero VAD in TorchScript mode.
# Not required when using faster_whisper backend with ONNX Silero VAD.
torch = [
  "torch>=2.1.0,<3.0.0",
  "torchaudio>=2.1.0,<3.0.0",
  "openai-whisper>=20240930,<20270000",
]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "grpcio-tools>=1.60.0,<2.0.0",
  "mypy-protobuf>=3.5.0,<4.0.0",
]
# Full install with all backends
all = [
  "torch>=2.1.0,<3.0.0",
  "torchaudio>=2.1.0,<3.0.0",
  "openai-whisper>=20240930,<20270000",
]

[project.scripts]
stt-server = "stt_server.main:main"
stt-client-file = "stt_client.realtime.file:main"
stt-client-mic = "stt_client.realtime.mic:main"
stt-client-batch = "stt_client.batch.file:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["stt_server*", "stt_client*", "gen*"]
namespaces = true
